[gd_scene load_steps=4 format=3 uid="uid://ccr3hu71pb168"]

[ext_resource type="Texture2D" uid="uid://b1l4x8podxupk" path="res://Sprites/Items/Switchboard_Items/spr_switchboard_dial.png" id="1_gy614"]
[ext_resource type="Script" uid="uid://de71q336bhu8b" path="res://Scripts/Interactable Scene/obj_dial.gd" id="2_ic713"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jqpgx"]
radius = 63.5059

[node name="obj_dial" type="Sprite2D"]
texture = ExtResource("1_gy614")
script = ExtResource("2_ic713")
power_val = 10

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_jqpgx")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
